sliders and split to classes

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <title>Andy Bruce's asgn1 for CSE160 Spring 2024</title>
+    <link rel="icon" href="data:,">
+    <script src="HelloPoint1.js" type="module"></script>
   </head>
   <body>
     <canvas id="andy_canvas" width="400" height="400"></canvas>
-    <script src="HelloPoint1.js" type="module"></script>
+    <br>
+    <label for="red_slider">R</label>
+    <input id="red_slider" type="range" min="0" max="100" value="100">
+    <br>
+    <label for="green_slider">G</label>
+    <input id="green_slider" type="range" min="0" max="100" value="100">
+    <br>
+    <label for="blue_slider">B</label>
+    <input id="blue_slider" type="range" min="0" max="100" value="100">
+    <hr>
+    <label for="size_slider">Size</label>
+    <input id="size_slider" type="range" min="0" max="30" value="10">
   </body>
 </html>
