--- a/index.html
+++ b/index.html
@@ -3,22 +3,28 @@
   <head>
     <meta charset="utf-8" />
     <title>Andy Bruce's asgn1 for CSE160 Spring 2024</title>
-    <link rel="icon" href="data:,">
+    <link rel="icon" href="data:," />
     <script src="HelloPoint1.js" type="module"></script>
   </head>
   <body>
     <canvas id="andy_canvas" width="400" height="400"></canvas>
-    <br>
+    <br />
+    <button id="button_clear">clear</button>
+    <hr />
+    <button id="button_shape_point">point</button>
+    <button id="button_shape_triangle">triangle</button>
+    <hr />
+    <br />
     <label for="red_slider">R</label>
-    <input id="red_slider" type="range" min="0" max="100" value="100">
-    <br>
+    <input id="red_slider" type="range" min="0" max="100" value="100" />
+    <br />
     <label for="green_slider">G</label>
-    <input id="green_slider" type="range" min="0" max="100" value="100">
-    <br>
+    <input id="green_slider" type="range" min="0" max="100" value="100" />
+    <br />
     <label for="blue_slider">B</label>
-    <input id="blue_slider" type="range" min="0" max="100" value="100">
-    <hr>
+    <input id="blue_slider" type="range" min="0" max="100" value="100" />
+    <hr />
     <label for="size_slider">Size</label>
-    <input id="size_slider" type="range" min="0" max="30" value="10">
+    <input id="size_slider" type="range" min="0" max="30" value="10" />
   </body>
 </html>
