--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <hr />
     <button id="button_shape_point">point</button>
     <button id="button_shape_triangle">triangle</button>
+    <button id="button_shape_circle">circle</button>
     <hr />
     <br />
     <label for="red_slider">R</label>
@@ -26,5 +27,8 @@
     <hr />
     <label for="size_slider">Size</label>
     <input id="size_slider" type="range" min="0" max="30" value="10" />
+    <hr />
+    <label for="num_segments_slider">Circle num segments</label>
+    <input id="num_segments_slider" type="range" min="1" max="30" value="10" />
   </body>
 </html>
