added pong "drawing"

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <canvas id="andy_canvas" width="400" height="400"></canvas>
+    <canvas id="drawing_canvas" width="400" height="400"></canvas>
     <br />
     <button id="button_clear">clear</button>
     <hr />
@@ -29,6 +30,6 @@
     <input id="size_slider" type="range" min="0" max="30" value="10" />
     <hr />
     <label for="num_segments_slider">Circle num segments</label>
-    <input id="num_segments_slider" type="range" min="1" max="30" value="10" />
+    <input id="num_segments_slider" type="range" min="3" max="30" value="10" />
   </body>
 </html>
