--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <body>
     <canvas id="andy_canvas" width="400" height="400"></canvas>
     <canvas id="drawing_canvas" width="400" height="400"></canvas>
+    <image src="assets/PongVideoGameCabinet.jpg" , height="400"></image>
+    <p>Everything is drawn using VAOs for more efficiency.</p>
+    <p>
+      Drawing is based off a pong (乒乓球) machine. Rectangles are made with 2
+      triangles.
+    </p>
+    <p>
+      The left paddle tries to follow the y position of the ball at all times.
+    </p>
+    <p>The right paddle calculates the position the ball will be.</p>
     <br />
     <button id="button_clear">clear</button>
     <hr />
