--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <title>Andy Bruce's asgn1 for CSE160 Spring 2024</title>
     <link rel="icon" href="data:," />
-    <script src="HelloPoint1.js" type="module"></script>
+    <script src="main.js" type="module"></script>
   </head>
   <body>
-    <canvas id="andy_canvas" width="400" height="400"></canvas>
+    <canvas id="paint_canvas" width="400" height="400"></canvas>
     <canvas id="drawing_canvas" width="400" height="400"></canvas>
     <image src="assets/PongVideoGameCabinet.jpg" , height="400"></image>
     <p>
